--- a/Basic_Implementation.ipynb
+++ b/Basic_Implementation.ipynb
@@ -244,7 +244,7 @@
         "---\n",
         "\n",
         "\n",
-        "This function will adjust weights to incorporate the input data into it's stored central basis vector, creating a prototype of the distribution of data. \n",
+        "This function will adjust weights to incorporate the input data into it's stored prototype, creating a prototype of the distribution of data. \n",
         "\n",
         "You must specify which neuron is to be trained. \n",
         "\n",
@@ -349,11 +349,11 @@
         "for i in range(60):\n",
         "  neuron1=(sum(layer.layerOutput(testData[i])[0:10] ))\n",
         "  if i<=19:\n",
-        "    py.scatter(i,neuron1,color='red') \n",
+        "    py.scatter(i,neuron1,color='red') #Zeros \n",
         "  elif i>=20 and i<=40:\n",
-        "    py.scatter(i,neuron1,color='blue') \n",
+        "    py.scatter(i,neuron1,color='blue') #Twos \n",
         "  elif i>=41:\n",
-        "    py.scatter(i,neuron1,color='green') \n",
+        "    py.scatter(i,neuron1,color='green')#Fours \n",
         "  "
       ],
       "execution_count": 0,
